plugins {
	id 'java'
	id 'org.springframework.boot' version '4.1.0'
	id 'io.spring.dependency-management' version '1.1.7'
}

group = 'com.tipsterbyte'
version = '0.0.1-SNAPSHOT'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(21)
	}
}

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-actuator'
	implementation 'org.springframework.boot:spring-boot-starter-validation'
	implementation 'org.springframework.boot:spring-boot-starter-webmvc'
	// ─────────────────────────────────────────────
	// [QUÉ]: Seguridad HTTP de Spring: cadena de filtros, autenticación y autorización.
	// [POR QUÉ]: FASE 11 añade login/JWT stateless con roles (TIPSTER/CLIENTE/ADMIN).
	//            Spring Security es el estándar del proceso de selección (ADR-003) y
	//            provee BCrypt para el hashing de contraseñas.
	// [ALTERNATIVAS]: Interceptores propios o servlet filters manuales; se descartan
	//                 porque reinvientan el modelo de autorización sin ganar nada.
	// [RELACIONES]: infrastructure.security (SecurityConfig, JwtAuthenticationFilter),
	//               JwtTokenEmisor, BcryptPasswordHasher (FASE 11).
	// ─────────────────────────────────────────────
	implementation 'org.springframework.boot:spring-boot-starter-security'
	// ─────────────────────────────────────────────
	// [QUÉ]: Librería JJWT para crear y validar tokens JWT (HS256).
	// [POR QUÉ]: FASE 11 emite un JWT firmado en login y lo valida en cada request.
	//            jjwt-api (compilación) + jjwt-impl y jjwt-jackson (runtime) evitan
	//            acoplar dependencias de implementación al código.
	// [ALTERNATIVAS]: spring-security-oauth2-jose (Nimbus); se descarta porque JJWT es
	//                 más directo para emitir/validar HS256 y ampliamente conocido.
	// [RELACIONES]: JwtTokenEmisor, JwtAuthenticationFilter (FASE 11).
	// ─────────────────────────────────────────────
	implementation 'io.jsonwebtoken:jjwt-api:0.12.6'
	runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.12.6'
	runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.12.6'
	// ─────────────────────────────────────────────
	// [QUÉ]: Persistencia relacional con JPA/Hibernate sobre PostgreSQL (FASE 8).
	// [POR QUÉ]: Los repository ports (application.port.XxxRepository) se implementan
	//            con Spring Data JPA + PostgreSQL 17. PostgreSQL es el motor objetivo
	//            (docker-compose en FASE 9); no se usa H2 porque el objetivo es prod.
	// [ALTERNATIVAS]: MyBatis o JDBC puro; se descartan porque JPA + Spring Data
	//                 reduce el boilerplate de mapeo y da transaccionalidad declarativa.
	// [RELACIONES]: infrastructure.persistence.entity/repository/adapter (FASE 8).
	// ─────────────────────────────────────────────
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	runtimeOnly 'org.postgresql:postgresql'
	testImplementation 'org.springframework.boot:spring-boot-starter-data-jpa-test'
	// ─────────────────────────────────────────────
	// [QUÉ]: Cliente Redis para el cache-aside de lecturas de fuentes externas.
	// [POR QUÉ]: FASE 12 implementa cache-aside sobre los proveedores de posiciones,
	//            calendario y cuotas (evita golpear el scraper en cada sincronización);
	//            Spring Data Redis aporta el StringRedisTemplate con TTL por clave.
	// [ALTERNATIVAS]: Caffeine (L1 local) como cache único; se descarta en FASE 12 para
	//                 no perder el valor de cache compartido/durable de Redis y porque el
	//                 plan lo define; queda previsto como L1 opcional en un futuro
	//                 CompositeCacheAdapter (FASE 17) sin tocar los casos de uso.
	// [RELACIONES]: infrastructure.cache.RedisCacheAdapter + decoradores
	//               ProveedorXxxCacheable (FASE 12).
	// ─────────────────────────────────────────────
	implementation 'org.springframework.boot:spring-boot-starter-data-redis'
    // ─────────────────────────────────────────────
    // [QUÉ]: Encoder JSON para Logback (logs estructurados con MDC) (FASE 12.6).
    // [POR QUÉ]: Los logs del scheduler y de las sincronizaciones se emiten en JSON
    //            (logback-spring.xml) para correlacionarlos en ELK/Loki/Grafana usando
    //            el executionId del MDC; logstash-logback-encoder es el estándar de
    //            facto para ello y no requiere cambiar el API de logging (SLF4J).
    // [ALTERNATIVAS]: Serializar logs a JSON manualmente en un appender propio; se
    //                 descarta por reinventar lo que ya aporta el encoder. Logback
    //                 clásico en texto plano; se descarta porque pierde trazabilidad
    //                 estructurada para el pipeline de observabilidad.
    // [RELACIONES]: logback-spring.xml + MDCTaskContext + CatalogoScheduler (FASE 12.6).
    // ─────────────────────────────────────────────
    implementation 'net.logstash.logback:logstash-logback-encoder:7.4'
	// ─────────────────────────────────────────────
	// [QUÉ]: Soporte Testcontainers para tests de integración de los adapters JPA.
	// [POR QUÉ]: Los repository adapters se prueban contra un PostgreSQL real en
	//            contenedor (regla testing.md), no contra la BD local de dev.
	// [ALTERNATIVAS]: H2 embebido; se descarta porque no valida SQL/DDL de PostgreSQL
	//                 ni las constraints reales del motor objetivo.
	// [RELACIONES]: Tests de infrastructure.persistence (FASE 8, profundizado en FASE 10).
	// ─────────────────────────────────────────────
	testImplementation 'org.springframework.boot:spring-boot-testcontainers'
	testImplementation 'org.testcontainers:testcontainers-postgresql:2.0.5'
	testImplementation 'org.testcontainers:testcontainers-junit-jupiter:2.0.5'
	// [POR QUÉ]: Los tests de cache (RedisCacheAdapterTest) levantan un Redis real con
	//             GenericContainer("redis:7-alpine") desde el core org.testcontainers;
	//             NO existe módulo testcontainers-redis en la línea 2.0.5 (los módulos
	//             específicos se renombraron). El core ya viene de las líneas anteriores.
	testImplementation 'org.springframework.boot:spring-boot-starter-actuator-test'
	testImplementation 'org.springframework.boot:spring-boot-starter-validation-test'
	testImplementation 'org.springframework.boot:spring-boot-starter-webmvc-test'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}

tasks.named('test') {
	useJUnitPlatform()
}
